@@ -1,9 +1,7 @@
 package com.team10.preproject.member.entity;
 
-import com.team10.preproject.audit.Auditable;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
+import com.team10.preproject.global.audit.Auditable;
+import lombok.*;
 
 import javax.persistence.*;
 import java.util.ArrayList;
@@ -11,44 +9,76 @@ import java.util.Arrays;
 import java.util.List;
 
 @NoArgsConstructor
+@Entity
 @Getter
 @Setter
-@Entity
-//@Data
-public class Member extends Auditable {
+public class Member extends Auditable{
+
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private  Long memberId;
-    private String roles;
+    private Long memberId;
 
-    @Column(nullable = false, updatable = false, unique = true)
-    private  String email;
+    @Enumerated(EnumType.STRING)
+    @Column(nullable = false)
+    private Role role;
 
-    @Column(nullable = false, updatable = false, unique = true)
-    private  String username;
+    @Column(nullable = false, unique = true)
+    private String email;
+
+    @Column(length = 20, unique = true, updatable = false)
+    private String username;
 
     @Column(length = 20, nullable = false)
-    private  String nickname;
+    private String nickname;
 
-    @Column(nullable = false)
-    private  String password;
+    private String password;
+
+    @Column(name = "verification_code", length = 64)
+    private String verificationCode;
+
+    @Column(length = 200)
+    private String favoriteCompany;
+
+    @Lob
+    private String picture;
+
+    @Column(length = 200)
+    private String selfIntroductions;
+
+    private boolean enabled;
 
 //    @Enumerated(value = EnumType.STRING)
 //    @Column(length = 20, nullable = false)
 //    private MemberStatus memberStatus = MemberStatus.MEMBER_ACTIVE;
 
-    public  Member(String email) { this.email = email; }
+    @Builder
+    public Member(Long memberId, String username, String email, Role role, boolean enabled, String verificationCode, String nickname, String password, String picture, String favoriteCompany, String selfIntroductions) {
 
-    public  Member(String username, String email, String nickname, String password) {
+        this.memberId = memberId;
         this.username = username;
         this.email = email;
+        this.role = role;
         this.nickname = nickname;
         this.password = password;
+        this.picture = picture;
+        this.favoriteCompany = favoriteCompany;
+        this.selfIntroductions = selfIntroductions;
+        this.enabled = enabled;
+        this.verificationCode = verificationCode;
+    }
+
+    public void updatePicture(String picture){
+        this.picture = picture;
+    }
+
+    public String getRoleKey(){
+        return this.role.getKey();
     }
 
     public List<String> getRoleList() {
-        if(this.roles.length() > 0) {
-            return Arrays.asList(this.roles.split(","));
+
+        if(this.role != null) {
+            return List.of(this.role.getKey());
         }
         return new ArrayList<>();
     }
